--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "require": {
         "php": "~7.1",
         "cawaphp/cawa" : "dev-master",
-        "symfony/console": "~4.0"
+        "symfony/console": "~4.0",
+        "symfony/debug": "~4.0"
     }
 }
